--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>learning-git-2</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <section>
+          <h1>america - a horse with no name</h1>
+          <p>
+            On the first part of the journey I was looking at all the life<br>
+            There were plants and birds and rocks and things<br>
+            There was sand and hills and rings<br>
+            The first thing I met was a fly with a buzz<br>
+            And the sky with no clouds<br>
+            The heat was hot and the ground was dry<br>
+            But the air was full of sound<br>
+          </p>
+        </section>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
