add further body content

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
             The heat was hot and the ground was dry<br>
             But the air was full of sound<br>
           </p>
+          <p>
+            I've been through the desert on a horse with no name<br>
+            It felt good to be out of the rain<br>
+            In the desert you can remember your name<br>
+            'Cause there ain't no one for to give you no pain<br>
+            La, la, la, la, la, la, la, la, la<br>
+            La, la, la, la, la, la, la, la, la<br>            
+          </p>
         </section>
       </div>
     </div>
