add final html content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
             In the desert you can remember your name<br>
             'Cause there ain't no one for to give you no pain<br>
             La, la, la, la, la, la, la, la, la<br>
-            La, la, la, la, la, la, la, la, la<br>            
+            La, la, la, la, la, la, la, la, la<br>
+          </p>
+          <p>
+            After two days in the desert sun my skin began to turn red<br>
+            After three days in the desert fun I was looking at a river bed<br>
+            And the story it told of a river that flowed<br>
+            Made me sad to think it was dead<br>
           </p>
         </section>
       </div>
